--- a/index.html
+++ b/index.html
@@ -3,113 +3,70 @@
   <head>
     <meta charset="utf-8">
     <title>N. J. Andersen's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto&family=Sacramento&display=swap" rel="stylesheet">
   </head>
 
   <body>
-    <table cellspacing = 20>
-      <tr>
-        <td>
-            <img src = "website pic.png" width = "300" height = "300"
-        </td>
-        <td>
-          <h1>N. J. Andersen</h1>
-          <p>
-            <em>Software Engineering student.</em>
-          </p>
-          <p>
-            I am a full time software engineering student, full time dad,
-            and full time pharmacy tech. I am currently focusing on web development
-            and android development.
-          </p>
-        </td>
-
-      </tr>
-    </table>
-    <hr />
-    <h3>Education</h3>
-    <p>
-      SNHU - 2019 to 2022
-      <br />
-      Marhsall University - 2011 to 2014
-    </P>
-      <br />
-      Course I've Taken:
-      <ul>
-        <li>Data Structures and Algorithms</li>
-        <li>Mobile Architecture Design</li>
-        <li>Reverse Software Engineering</li>
-      </ul>
-      <br />
-      <h3>My Hobbies</h3>
-      <ol>
-        <li>Video Games</li>
-        <li>3D Printing</li>
-        <li>3D Modeling</li>
-      </ol>
-    <br />
-    <hr />
-    <h4>Work Experience</h4>
-    <table cellspacing = "10">
-      <thead>
+    <div class = "header-container">
+      <table cellspacing = 20>
         <tr>
-          <th>Dates</th>
-          <th>Work</th>
+          <td>
+              <img src = "images/website pic.png" width = "300" height = "300"
+          </td>
+          <td>
+            <h1>N. J. Andersen</h1>
+            <h2>Software Engineering student.</h2>
+          </td>
+
         </tr>
-      </thead>
-      <tr>
-        <td>2016-Present</td>
-        <td>Pharmacy Technician</td>
-      </tr>
-      <tr>
-        <td>2011-2016</td>
-        <td>Various Jobs</td>
-      </tr>
-    </table>
-    <hr />
-    <h3>Skills</h3>
-    <table cellspacing = "10">
-      <tr>
-        <td>
-          <table>
-            <tr>
-              <td>Android Development</td>
-              <td>⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>Web Development</td>
-              <td>⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>JavaScript</td>
-              <td>⭐⭐⭐⭐</td>
-            </tr>
-          </table>
-        </td>
-        <td>
-          <table>
-            <tr>
-              <td>Java</td>
-              <td>⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>C++</td>
-              <td>⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>React</td>
-              <td>⭐⭐⭐⭐</td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table>
-    <hr />
-    <h4>Find out more about me here: </h4>
-    <a href = "https://www.linkedin.com/in/nicholas-andersen-962b60121/">
-      Linkedin
-    </a>
-    <p>
-      Or feel free to contact me <a href="contact-me.html">here.</a>
-    </p>
+      </table>
+    </div>
+      <div class="middle-container">
+        <div class="profile">
+          <img src="" alt="">
+          <h2>Hello.</h2>
+          <p class="intro">I am a full time software engineering student, full time dad,
+          and full time pharmacy tech. I am currently focusing on web development
+          and android development.</p>
+        </div>
+      </div>
+        <hr>
+        <div class="skills">
+          <h2>My Skills.</h2>
+          <div class="skill-row">
+            <img class="design" src="images/design.gif" />
+            <h3>Design</h3>
+            <p>Front end web design is something new I have picked up. In a short
+              time I have become proficient in HTML and CSS, along with bootstrap.
+              I am also skilled in XML and android design and development.
+            </p>
+          </div>
+          <div class="skill-row">
+            <img class="coding" src="images/coding.gif" alt="">
+            <h3>Backend & Languages</h3>
+            <p>
+              I started my coding journey by learning C++ in my classes. I am
+              fairly familiar with it but language I know the most is Java.
+              I also know Javascript and react. As far as databases go, I have
+              experince with MongoDB and sqlite along with android ROOM.
+            </p>
+          </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+          <h2>Get In Touch</h2>
+          <h3>If you would like to know more about me.</h3>
+          <p>Looking for a new web or android engineer? Click down below and send me a message!.</p>
+          <a class="btn" href="mailto:njandersen22@gmail.com">CONTACT ME</a>
+      </div>
+
+
+      <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/in/nicholas-andersen-962b60121/">LinkedIn</a>
+        <p class = "copyright">© Nicholas Jordan Andersen.</p>
+      </div>
   </body>
 </html>
